mobile spacing fixed

--- a/style.css
+++ b/style.css
@@ -564,7 +564,7 @@ section{
 
   #about{
       margin-top:0 !important;
-      padding-top:40px !important;
+      padding-top:0px !important;
   }
 
 #about p{
